--- a/callback.html
+++ b/callback.html
@@ -145,12 +145,12 @@
                 if (needPhoneCheck) {
                     // 需要補充電話，跳轉到補充資料頁面
                     setTimeout(() => {
-                        window.location.href = 'ecommerce-with-approval.html?action=updateProfile';
+                        window.location.href = 'ecommerce-with-approval-1.html?action=updateProfile';
                     }, 1000);
                 } else {
                     // 已有電話，直接跳回首頁
                     setTimeout(() => {
-                        window.location.href = 'ecommerce-with-approval.html';
+                        window.location.href = 'ecommerce-with-approval-1.html';
                     }, 1000);
                 }
 
