Change logo text

--- a/ecommerce.html
+++ b/ecommerce.html
@@ -1629,7 +1629,7 @@
     </form>
     <!-- 導航列 -->
     <nav class="navbar">
-        <div class="logo">🍬 CANDY BOSS</div>
+        <div class="logo">R E X</div>
         <div class="nav-buttons" id="navButtons" style="display:none;">
             <button class="nav-btn" id="lineLoginBtn" onclick="lineLogin()" style="display:none;">
                 <img src="https://developers.line.biz/media/line-login/btn_base.png" alt="LINE Login" style="height:40px;">
