--- a/callback.html
+++ b/callback.html
@@ -84,7 +84,7 @@
                     body: new URLSearchParams({
                         grant_type: 'authorization_code',
                         code: code,
-                        redirect_uri: 'https://qaz601170625123-droid.github.io/CBC/callback.html',
+                        redirect_uri: 'https://cbc-lake.vercel.app/callback.html',
                         client_id: LINE_CHANNEL_ID,
                         client_secret: LINE_CHANNEL_SECRET
                     })
