--- a/ecommerce.html
+++ b/ecommerce.html
@@ -715,6 +715,7 @@
         }
         
         .spec-image {
+            display: none;
             width: 35%;
             height: 100px;
             background: #f5f5f5;
