--- a/ecommerce.html
+++ b/ecommerce.html
@@ -2553,8 +2553,8 @@ async function loadProductsData() {
                     price: _salePrice > 0 ? _salePrice : _normalPrice,  // D有特價用特價，否則用F原價
                     originalPrice: _salePrice > 0 ? _normalPrice : 0,   // 有特價才顯示劃線原價
                     stock: parseInt(row[4]) || 0,
-                    image: row[6] || '',                        // G欄：圖片
-                    quantityMultiplier: parseInt(row[7]) || 1   // H欄：倍數
+                    image: '',                                  // 無圖片欄
+                    quantityMultiplier: parseInt(row[6]) || 1   // G欄：倍數
                 };
                 
                 if (!productSpecs[productId]) {
@@ -3042,8 +3042,8 @@ async function refreshAllStock() {
                     price: _salePrice2 > 0 ? _salePrice2 : _normalPrice2,
                     originalPrice: _salePrice2 > 0 ? _normalPrice2 : 0,
                     stock: parseInt(row[4]) || 0,
-                    image: row[6] || '',
-                    quantityMultiplier: parseInt(row[7]) || 1
+                    image: '',
+                    quantityMultiplier: parseInt(row[6]) || 1
                 };
                 
                 if (!productSpecs[productId]) {
